syntax = "proto3";

package api.duty.v1;

option go_package = "gbmerp/api/duty/v1;v1";
option java_multiple_files = true;
option java_package = "api.duty.v1";

service Duty {
	rpc GetDuty (GetDutyRequest) returns (GetDutyReply);
}

message GetDutyRequest {
	int64 id = 1;
}

message GetDutyReply {
	int64 id = 1;
	string no = 2;
	string name = 3;
	int64 level = 4;
}